--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@
               />
               <span>Month 2</span>
             </div>
-            <h2>Trafalgar</h2>
-            <p>Project</p>
+            <a
+              class="vercel-link"
+              href="https://trafalgar-full-henna.vercel.app/"
+              >Trafalgar</a
+            >
+
+            <a
+              class="github-link"
+              href="https://github.com/dadahond/trafalgar-full"
+              >github</a
+            >
             <div class="project-card-bottom">
               <img
                 class="homework"
@@ -65,8 +74,16 @@
               />
               <span>Month 2</span>
             </div>
-            <h2>Social Media</h2>
-            <p>Project</p>
+            <a
+              class="vercel-link"
+              href="https://social-media-dashboard-alpha-wheat.vercel.app/"
+              >Social Media</a
+            >
+            <a
+              class="github-link"
+              href="https://github.com/dadahond/SocialMediaDashboard"
+              >github</a
+            >
             <div class="project-card-bottom">
               <img
                 class="homework"
@@ -85,8 +102,14 @@
               />
               <span>Month 2</span>
             </div>
-            <h2>Richard</h2>
-            <p>Project</p>
+            <a
+              class="vercel-link"
+              href="https://richard-header-and-main.vercel.app/"
+              >Richard</a
+            >
+            <a class="github-link" href="https://github.com/dadahond/Richard"
+              >github</a
+            >
             <div class="project-card-bottom">
               <img
                 class="homework"
@@ -105,8 +128,16 @@
               />
               <span>Month 3</span>
             </div>
-            <h2>Designo</h2>
-            <p>Project</p>
+            <a
+              class="vercel-link"
+              href="https://designo-home-page-ready.vercel.app/"
+              >Designo</a
+            >
+            <a
+              class="github-link"
+              href="https://github.com/dadahond/Designo--our-company-"
+              >github</a
+            >
             <div class="project-card-bottom">
               <img
                 class="homework"
@@ -123,17 +154,108 @@
                 src="./images/najot-talim-white.jpg"
                 alt="SMD"
               />
-              <span>Month 3</span>
+              <span>Month 2</span>
             </div>
-            <h2>Furniro</h2>
-            <p>Project</p>
+            <a
+              class="vercel-link"
+              href="https://trafalgar-full-henna.vercel.app/"
+              >Trafalgar</a
+            >
+
+            <a
+              class="github-link"
+              href="https://github.com/dadahond/trafalgar-full"
+              >github</a
+            >
             <div class="project-card-bottom">
               <img
                 class="homework"
                 src="./images/homework-icon.jpg"
                 alt="SMD"
               />
-              <span>Homework 5</span>
+              <span>Homework 6</span>
+            </div>
+          </div>
+          <div class="project-card green">
+            <div class="project-card-up">
+              <img
+                class="najot-talim"
+                src="./images/najot-talim-white.jpg"
+                alt="SMD"
+              />
+              <span>Month 2</span>
+            </div>
+            <a
+              class="vercel-link"
+              href="https://social-media-dashboard-alpha-wheat.vercel.app/"
+              >Social Media</a
+            >
+            <a
+              class="github-link"
+              href="https://github.com/dadahond/SocialMediaDashboard"
+              >github</a
+            >
+            <div class="project-card-bottom">
+              <img
+                class="homework"
+                src="./images/homework-icon.jpg"
+                alt="SMD"
+              />
+              <span>Homework 11</span>
+            </div>
+          </div>
+          <div class="project-card orange">
+            <div class="project-card-up">
+              <img
+                class="najot-talim"
+                src="./images/najot-talim-white.jpg"
+                alt="SMD"
+              />
+              <span>Month 2</span>
+            </div>
+            <a
+              class="vercel-link"
+              href="https://richard-header-and-main.vercel.app/"
+              >Richard</a
+            >
+            <a class="github-link" href="https://github.com/dadahond/Richard"
+              >github</a
+            >
+            <div class="project-card-bottom">
+              <img
+                class="homework"
+                src="./images/homework-icon.jpg"
+                alt="SMD"
+              />
+              <span>Homework 12</span>
+            </div>
+          </div>
+          <div class="project-card red">
+            <div class="project-card-up">
+              <img
+                class="najot-talim"
+                src="./images/najot-talim-white.jpg"
+                alt="SMD"
+              />
+              <span>Month 3</span>
+            </div>
+            <a
+              class="vercel-link"
+              href="https://designo-home-page-ready.vercel.app/"
+              >Designo</a
+            >
+            <a
+              class="github-link"
+              href="https://github.com/dadahond/Designo--our-company-"
+              >github</a
+            >
+            <div class="project-card-bottom">
+              <img
+                class="homework"
+                src="./images/homework-icon.jpg"
+                alt="SMD"
+              />
+              <span>Homework 2</span>
             </div>
           </div>
         </div>
