--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </header>
     <main>
       <div class="container">
+        <h1 class="my-project">My Projects</h1>
         <div class="projects-card-all">
           <div class="project-card blue">
             <div class="project-card-up">
@@ -256,6 +257,35 @@
                 alt="SMD"
               />
               <span>Homework 2</span>
+            </div>
+          </div>
+          <div class="project-card blue">
+            <div class="project-card-up">
+              <img
+                class="najot-talim"
+                src="./images/najot-talim-white.jpg"
+                alt="SMD"
+              />
+              <span>Month 2</span>
+            </div>
+            <a
+              class="vercel-link"
+              href="https://trafalgar-full-henna.vercel.app/"
+              >Trafalgar</a
+            >
+
+            <a
+              class="github-link"
+              href="https://github.com/dadahond/trafalgar-full"
+              >github</a
+            >
+            <div class="project-card-bottom">
+              <img
+                class="homework"
+                src="./images/homework-icon.jpg"
+                alt="SMD"
+              />
+              <span>Homework 6</span>
             </div>
           </div>
         </div>
