--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
 
   <body class="dark-mode">
+    <!--  PRELOADING PAGE -->
+    <div id="preloader"></div>
+
     <header>
       <nav>
         <div class="container">
@@ -291,5 +294,13 @@
         </div>
       </div>
     </main>
+    <!-- PRELOADING PAGE -->
+    <script>
+      var loader = document.getElementById("preloader");
+
+      window.addEventListener("load", function () {
+        loader.style.display = "none";
+      });
+    </script>
   </body>
 </html>
